--- a/HelpDesk.Web/Views/Account/Login.cshtml
+++ b/HelpDesk.Web/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giriş Yap | Help Desk - Arıanızı Çözmek Bizim İçin Zevk</title>
+    <title>Giriş Yap | Help Desk - Arızanızı Çözmek Bizim İçin Zevk</title>
     <link rel="shortcut icon" href="~/assets/img/favicon.ico">
     <!--STYLESHEET-->
     <!--=================================================-->
