--- a/HelpDesk.Web/Views/Home/Index.cshtml
+++ b/HelpDesk.Web/Views/Home/Index.cshtml
@@ -1,98 +1,195 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@using HelpDesk.BLL.Account
+@using Microsoft.AspNetCore.Identity
+
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
+@{
+    ViewBag.Title = "Ana Sayfa";
+    Layout = "~/Views/Shared/_LayoutMain.cshtml";
 }
 
-<div id="content-container">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        Learn how to build ASP.NET apps that can run anywhere.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
+@if (User.IsInRole("Admin"))
+{
+    <h1>Hoş geldin reis-i site!</h1>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="row" align="center">
+                    <img height="500px" width="500px" src="~/assets/img/devices-icons-free-vector.jpg" />
+                </div><br />
             </div>
-            <div class="item">
-                <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        There are powerful new features in Visual Studio for building modern web apps.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="widgetbox widgetbox-default widgetbox-item-icon">
+                            <div class="widgetbox-item-right widgetbox-icon-danger"> <span class="fa fa-clock-o"></span> </div>
+                            <div class="widgetbox-data-left">
+                                <div class="widgetbox-int">@ViewBag.pendingFailureCount</div>
+                                <p>Bekleyen Arıza</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="widgetbox widgetbox-default widgetbox-item-icon">
+                            <div class="widgetbox-item-right widgetbox-icon-warning"> <span class="fa fa-user"></span> </div>
+                            <div class="widgetbox-data-left">
+                                <div class="widgetbox-int">@ViewBag.availableTechnicianCount</div>
+                                <p>Uygun Teknisyen</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="item">
-                <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
+                <div class="jumbotron">
+                    <h1>
+                        Hoş geldin<br>
+                        <strong>@MembershipTools.GetNameSurname() .GetNameSurname(HttpContext.Current.User.Identity.GetUserId())</strong>!
+                    </h1>
+                    <p>Emeklilik ne zaman?</p>
                 </div>
             </div>
         </div>
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
     </div>
+}
+else if (User.IsInRole("Technician"))
+{
+    <h1>Teknisyen Sayfası</h1>
 
-    <div class="row">
-        <div class="col-md-3">
-            <h2>Application uses</h2>
-            <ul>
-                <li>Sample pages using ASP.NET Core MVC</li>
-                <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-            </ul>
-        </div>
-        <div class="col-md-3">
-            <h2>How to</h2>
-            <ul>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-            </ul>
-        </div>
-        <div class="col-md-3">
-            <h2>Overview</h2>
-            <ul>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-            </ul>
-        </div>
-        <div class="col-md-3">
-            <h2>Run &amp; Deploy</h2>
-            <ul>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-            </ul>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="row" align="center">
+                    <img height="500px" width="500px" src="~/assets/img/devices-icons-free-vector.jpg" />
+                </div><br />
+            </div>
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="widgetbox widgetbox-default widgetbox-item-icon">
+                            <div class="widgetbox-item-right widgetbox-icon-danger"> <span class="fa fa-clock-o"></span> </div>
+                            <div class="widgetbox-data-left">
+                                <div class="widgetbox-int">@ViewBag.pendingFailureCount</div>
+                                <p>Bekleyen Arıza</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="widgetbox widgetbox-default widgetbox-item-icon">
+                            <div class="widgetbox-item-right widgetbox-icon-warning"> <span class="fa fa-user"></span> </div>
+                            <div class="widgetbox-data-left">
+                                <div class="widgetbox-int">@ViewBag.availableTechnicianCount</div>
+                                <p>Uygun Teknisyen</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="jumbotron">
+                    <h1>
+                        Hoş geldin<br>
+                        <strong>@MembershipTools.GetNameSurname()</strong>!
+                    </h1>
+                    <p>Yeni bir gün ve yeni arızalar! İşe koyulma zamanı!</p>
+                    <h1 class="text-center"><a class="btn btn-primary btn-lg btn-block" href="@Url.Action("FailureList", "Technician")" role="button">Arıza Listesine Git</a></h1>
+                </div>
+            </div>
         </div>
     </div>
-</div>
+}
+else if (User.IsInRole("Operator"))
+{
+    <h1>Operatör Sayfası</h1>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="row" align="center">
+                    <img height="500px" width="500px" src="~/assets/img/devices-icons-free-vector.jpg" />
+                </div><br />
+            </div>
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="widgetbox widgetbox-default widgetbox-item-icon">
+                            <div class="widgetbox-item-right widgetbox-icon-danger"> <span class="fa fa-clock-o"></span> </div>
+                            <div class="widgetbox-data-left">
+                                <div class="widgetbox-int">@ViewBag.pendingFailureCount</div>
+                                <p>Bekleyen Arıza</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="widgetbox widgetbox-default widgetbox-item-icon">
+                            <div class="widgetbox-item-right widgetbox-icon-warning"> <span class="fa fa-user"></span> </div>
+                            <div class="widgetbox-data-left">
+                                <div class="widgetbox-int">@ViewBag.availableTechnicianCount</div>
+                                <p>Uygun Teknisyen</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="jumbotron">
+                    <h1>
+                        Hoş geldin<br>
+                        <strong>@MembershipTools.GetNameSurname()</strong>!
+                    </h1>
+                    <p>Her geçen saniye dünyada 30 bin kadar elektronik alet bozuluyor. Gayet sallama bir rakam oldu bu. Senin işin de bu arızaları doğru teknisyenlere atamak. Kolay gelsin!</p>
+                    <h1 class="text-center"><a class="btn btn-primary btn-lg btn-block" href="@Url.Action("FailureList", "Operator")" role="button">Arıza Listesine Git</a></h1>
+                </div>
+            </div>
+        </div>
+
+    </div>
+}
+else if (User.IsInRole("User"))
+{
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="row" align="center">
+                    <img height="500px" width="500px" src="~/assets/img/devices-icons-free-vector.jpg" />
+                </div><br />
+            </div>
+            <div class="col-md-6">
+                <div class="jumbotron">
+                    <h1>
+                        Hoş geldin<br>
+                        <strong>@MembershipTools.GetNameSurname()</strong>!
+                    </h1>
+                    <p>Cana geleceğine mala gelsin, siz hiç üzülmeyin! Arızanızı alanında uzman ekiplerimize bildirin ve sadece bir gün içinde çözmeye gelelim!</p>
+                    <h1 class="text-center"><a class="btn btn-primary btn-lg btn-block" href="@Url.Action("Add", "Failure")" role="button">Yeni arıza ekleyin</a></h1>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+}
+else
+{
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="row" align="center">
+                    <img height="500px" width="500px" src="~/assets/img/devices-icons-free-vector.jpg" />
+                </div><br />
+            </div>
+            <div class="col-md-6">
+                <div class="jumbotron">
+                    <h1>
+                        Hoş geldin!
+                    </h1>
+                    <p>Cana geleceğine mala gelsin, siz hiç üzülmeyin! Arızanızı alanında uzman ekiplerimize bildirin ve sadece bir gün içinde çözmeye gelelim! Başlamak için:</p>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h1 class="text-center"><a class="btn btn-success btn-lg btn-block" href="@Url.Action("Index", "Account")" role="button">Giriş Yapın</a></h1>
+                        </div>
+                        <div class="col-md-6">
+                            <h1 class="text-center"><a class="btn btn-warning btn-lg btn-block" href="@Url.Action("Register", "Account")" role="button">Kaydolun</a></h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+}
 
 
