--- a/HelpDesk.Web/Views/Shared/_Layout.cshtml
+++ b/HelpDesk.Web/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
         <!-- FOOTER -->
         <!--===================================================-->
         <footer id="footer">
-            <p class="pad-lft">&#0169; @DateTime.Now.Year Jedi Danışmanlık, Bilişim Hizmetleri A.Ş.</p>
+            <p class="pad-lft">&#0169; @DateTime.Now.Year AlaDağ Danışmanlık, Bilişim Hizmetleri A.Ş.</p>
         </footer>
         <!--===================================================-->
         <!-- END FOOTER -->
