Giriş sayfasındaki hata giderildi. #2

--- a/HelpDesk.Web/Views/Account/Login.cshtml
+++ b/HelpDesk.Web/Views/Account/Login.cshtml
@@ -23,7 +23,7 @@
     <!--Font Awesome [ OPTIONAL ]-->
     <link href="~/assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!--Switchery [ OPTIONAL ]-->
-    <link href="~/assets/plugins/switchery/switchery.min.css" rel="stylesheet">r
+    <link href="~/assets/plugins/switchery/switchery.min.css" rel="stylesheet">
     <!--Bootstrap Select [ OPTIONAL ]-->
     <link href="~/assets/plugins/bootstrap-select/bootstrap-select.min.css" rel="stylesheet">
     <!--Demo [ DEMONSTRATION ]-->
