--- a/HelpDesk.Web/Views/Home/Index.cshtml
+++ b/HelpDesk.Web/Views/Home/Index.cshtml
@@ -1,12 +1,13 @@
 ﻿@using HelpDesk.BLL.Account
+@using HelpDesk.Models.IdentityEntities
 @using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 @{
     ViewBag.Title = "Ana Sayfa";
-    Layout = "~/Views/Shared/_LayoutMain.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @if (User.IsInRole("Admin"))
