--- a/HelpDesk.Web/Views/Account/Login.cshtml
+++ b/HelpDesk.Web/Views/Account/Login.cshtml
@@ -41,6 +41,7 @@
     <div id="container">
         <!-- LOGIN FORM -->
         <!--===================================================-->
+        <h4>@TempData["Message"]</h4>
         <div class="lock-wrapper">
             <div class="row">
                 <div class="col-xs-12">
@@ -60,9 +61,9 @@
                                     <span asp-validation-for="Password" class="text-danger"></span>
                                 </div>
                                 <div class="form-group col-md-12 col-sm-12 col-xs-12">
-                                        <label class="form-checkbox form-icon form-text">
-                                            <input asp-for="RememberMe"/> @Html.DisplayNameFor(model => model.RememberMe)
-                                        </label>
+                                    <label class="form-checkbox form-icon form-text">
+                                        <input asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
+                                    </label>
                                 </div>
                                 <div class="form-group col-md-12 col-sm-12 col-xs-12">
                                     <input type="submit" value="Giriş Yap" class="btn btn-app btn" />
