--- a/HelpDesk.Web/Views/Shared/_DrawerPartial.cshtml
+++ b/HelpDesk.Web/Views/Shared/_DrawerPartial.cshtml
@@ -1,4 +1,7 @@
-﻿<!--Brand logo & name-->
+﻿@using HelpDesk.BLL.Account
+@using HelpDesk.Models.Enums
+@inject MembershipTools MembershipTools
+<!--Brand logo & name-->
 <!--================================-->
 <div class="navbar-header">
     <a href="index.html" class="navbar-brand">
@@ -23,32 +26,32 @@
 
                     <li> <a href="@Url.Action("Index","Home")"> <i class="fa fa-home"></i> <span class="menu-title">Ana Sayfa</span> </a> </li>
 
-                    @if (User.IsInRole("Admin"))
+                    @if (MembershipTools.IHttpContextAccessor.HttpContext.User.IsInRole("Client"))
                     {
-                        <li><a href="@Url.Action("UserList","Admin")"> <i class="fa fa-user"></i> <span class="menu-title">Kullanıcı Listesi</span></a></li>
-                        <li><a href="@Url.Action("Index","Failure")"> <i class="fa fa-briefcase"></i> <span class="menu-title">Kullanıcı Arıza Listesi</span></a></li>
-                        <li><a href="@Url.Action("FailureList","Technician")"> <i class="fa fa-briefcase"></i> <span class="menu-title">Teknisyen Arıza Listesi</span></a></li>
-                        <li><a href="@Url.Action("FailureList","Operator")"> <i class="fa fa-clock-o"></i> <span class="menu-title">Operatör Arıza Listesi</span></a></li>
-                        <li><a href="@Url.Action("Reports","Admin")"> <i class="fa fa-bar-chart"></i> <span class="menu-title">Raporlar</span></a></li>
-                        <li><a href="@Url.Action("GetAllFailures","Failure")"> <i class="fa fa-ioxhost"></i> <span class="menu-title">Kapanmış Arızalar</span></a></li>
+                    <li><a href="@Url.Action("UserList","Admin")"> <i class="fa fa-user"></i> <span class="menu-title">Kullanıcı Listesi</span></a></li>
+                    <li><a href="@Url.Action("Index","Failure")"> <i class="fa fa-briefcase"></i> <span class="menu-title">Kullanıcı Arıza Listesi</span></a></li>
+                    <li><a href="@Url.Action("FailureList","Technician")"> <i class="fa fa-briefcase"></i> <span class="menu-title">Teknisyen Arıza Listesi</span></a></li>
+                    <li><a href="@Url.Action("FailureList","Operator")"> <i class="fa fa-clock-o"></i> <span class="menu-title">Operatör Arıza Listesi</span></a></li>
+                    <li><a href="@Url.Action("Reports","Admin")"> <i class="fa fa-bar-chart"></i> <span class="menu-title">Raporlar</span></a></li>
+                    <li><a href="@Url.Action("GetAllFailures","Failure")"> <i class="fa fa-ioxhost"></i> <span class="menu-title">Kapanmış Arızalar</span></a></li>
                     }
-                    else if (User.IsInRole("Technician"))
+                    else if (MembershipTools.IHttpContextAccessor.HttpContext.User.IsInRole("Technician"))
                     {
-                        <li><a href="@Url.Action("FailureList","Technician")"> <i class="fa fa-briefcase"></i> <span class="menu-title">Arıza Listem</span></a></li>
+                    <li><a href="@Url.Action("FailureList","Technician")"> <i class="fa fa-briefcase"></i> <span class="menu-title">Arıza Listem</span></a></li>
                     }
-                    else if (User.IsInRole("Operator"))
+                    else if (MembershipTools.IHttpContextAccessor.HttpContext.User.IsInRole("Operator"))
                     {
-                        <li><a href="@Url.Action("FailureList","Operator")"> <i class="fa fa-briefcase"></i> <span class="menu-title">Arıza Listesi</span></a></li>
-                        <li><a href="@Url.Action("OperationList","Operator")"> <i class="fa fa-clock-o"></i> <span class="menu-title">Operatör İşlemlerim</span></a></li>
+                    <li><a href="@Url.Action("FailureList","Operator")"> <i class="fa fa-briefcase"></i> <span class="menu-title">Arıza Listesi</span></a></li>
+                    <li><a href="@Url.Action("OperationList","Operator")"> <i class="fa fa-clock-o"></i> <span class="menu-title">Operatör İşlemlerim</span></a></li>
                     }
-                    else if (User.IsInRole("User"))
+                    else if (MembershipTools.IHttpContextAccessor.HttpContext.User.IsInRole("Client"))
                     {
-                        <li><a href="@Url.Action("Index","Failure")"> <i class="fa fa-briefcase"></i> <span class="menu-title">Arıza Listem</span></a></li>
+                    <li><a href="@Url.Action("Index","Failure")"> <i class="fa fa-briefcase"></i> <span class="menu-title">Arıza Listem</span></a></li>
                     }
                     else
                     {
-                        <li><a href="@Url.Action("Index","Account")"> <i class="fa fa-paper-plane"></i> <span class="menu-title">Giriş Yap</span></a></li>
-                        <li><a href="@Url.Action("Register","Account")"> <i class="fa fa-user"></i> <span class="menu-title">Kaydol</span></a></li>
+                    <li><a href="@Url.Action("Index","Account")"> <i class="fa fa-paper-plane"></i> <span class="menu-title">Giriş Yap</span></a></li>
+                    <li><a href="@Url.Action("Register","Account")"> <i class="fa fa-user"></i> <span class="menu-title">Kaydol</span></a></li>
                     }
                 </ul>
             </div>
