--- a/HelpDesk.Web/Views/Shared/_Layout.cshtml
+++ b/HelpDesk.Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="~/assets/img/favicon.ico">
-    <title>@ViewData["Title"] - Anasayfa</title>
+    <title>@ViewData["Title"] - Help Desk</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -17,12 +17,11 @@
         <link href="~/assets/css/style.css" rel="stylesheet" />
         <link href="~/assets/plugins/switchery/switchery.min.css" rel="stylesheet" />
         <link href="~/assets/plugins/bootstrap-select/bootstrap-select.min.css" rel="stylesheet" />
-        <link href="~/assets/plugins/jquery-ricksaw-chart/css/rickshaw.css" rel="stylesheet" />
-        <link href="~/assets/plugins/bootstrap-validator/bootstrapValidator.min.css" rel="stylesheet" />
-        <link href="~/assets/plugins/summernote/summernote.min.css" rel="stylesheet" />
         <link href="~/assets/css/demo/jasmine.css" rel="stylesheet" />
         <link href="~/assets/plugins/pace/pace.min.css" rel="stylesheet" />
         <link href="~/assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+        <link href="~/assets/plugins/pace/pace.min.css" rel="stylesheet">
+        <script src="~/assets/plugins/pace/pace.min.js"></script>
         @RenderSection("top", false)
     </environment>
 
@@ -86,13 +85,17 @@
     <partial name="_CookieConsentPartial" />
 
     <environment include="Development">
+
         <script src="~/assets/js/jquery-2.1.1.min.js"></script>
-        <script src="~/assets/plugins/metismenu/metismenu.min.js"></script>
         <script src="~/assets/js/bootstrap.min.js"></script>
+        <script src="~/assets/plugins/fast-click/fastclick.min.js"></script>
         <script src="~/assets/js/scripts.js"></script>
+        <script src="~/assets/plugins/nanoscrollerjs/jquery.nanoscroller.min.js"></script>
+        <script src="~/assets/plugins/metismenu/metismenu.min.js"></script>
+        <script src="~/assets/plugins/switchery/switchery.min.js"></script>
+        <script src="~/assets/plugins/bootstrap-select/bootstrap-select.min.js"></script>
+        <script src="~/assets/plugins/jquery-print/jQuery.print.js"></script>
         <script src="~/assets/plugins/screenfull/screenfull.js"></script>
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
