--- a/HelpDesk.Web/Views/Account/Login.cshtml
+++ b/HelpDesk.Web/Views/Account/Login.cshtml
@@ -4,7 +4,7 @@
 }
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <meta charset="utf-8">
@@ -65,9 +65,16 @@
                                         <input asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
                                     </label>
                                 </div>
-                                <div class="form-group col-md-12 col-sm-12 col-xs-12">
+                                <div class="form-group col-md-6 col-sm-6 col-xs-6">
                                     <input type="submit" value="Giriş Yap" class="btn btn-app btn" />
+
                                 </div>
+                                <div class="form-group col-md-6 col-sm-6 col-xs-6">
+                                    <a href="@Url.Action("RecoverPassword", "Account")" class="btn btn-app btn">
+                                        Şifremi Unuttum
+                                    </a>
+                                </div>
+                                
                             </form>
                         </div>
 
